[package]
name = "xilem-sudoku"
version = "0.1.0"
edition = "2024"

[dependencies]
xilem   = { git = "https://github.com/linebender/xilem.git", rev = "c44e94b6139f794268a23355b525985ab597db98" }
xilem_core = { git = "https://github.com/linebender/xilem.git", rev = "c44e94b6139f794268a23355b525985ab597db98" }
masonry = { git = "https://github.com/linebender/xilem.git", rev = "c44e94b6139f794268a23355b525985ab597db98" }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "c44e94b6139f794268a23355b525985ab597db98" }
vello = "0.6.0"
winit = "0.30.12"
tracing = "0.1.41"
rand = "0.9.2"
tokio = "1.48.0"

[profile.dev]
opt-level = 3

