[package]
name = "xilem-sudoku"
version = "0.2.0"
edition = "2024"

[dependencies]
xilem = { git = "https://github.com/linebender/xilem.git", rev = "97a0b696bfcd7283bbb7d5995d79993077513c7c" }
xilem_core = { git = "https://github.com/linebender/xilem.git", rev = "97a0b696bfcd7283bbb7d5995d79993077513c7c" }
masonry = { git = "https://github.com/linebender/xilem.git", rev = "97a0b696bfcd7283bbb7d5995d79993077513c7c" }
masonry_winit = { git = "https://github.com/linebender/xilem.git", rev = "97a0b696bfcd7283bbb7d5995d79993077513c7c" }

winit = "0.30.12"
rand = "0.9.2"
tokio = "1.48.0"

[profile.dev]
opt-level = 3

